Bug 482737 - KAddressbook crash editing entry
Summary: KAddressbook crash editing entry
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.0
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi, qt6
Depends on:
Blocks:
 
Reported: 2024-03-07 15:52 UTC by Simon Brown
Modified: 2024-03-10 10:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Brown 2024-03-07 15:52:12 UTC
Application: kaddressbook (6.0.0 (24.02.0))

Qt Version: 6.6.2
Frameworks Version: 6.0.0
Operating System: Linux 6.5.0-21-generic x86_64
Windowing System: X11
Distribution: KDE neon 6.0
DrKonqi: 6.0.0 [KCrashBackend]

-- Information about the crash:
I can reproduce the bug with:
- Reboot computer
- Log into Plasma X11 session
- Open KAddressbook using launcher application menu
- search for entry
- select entry
- click on edit contact
- the edit window appears for a moment, then the app crashes.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: KAddressBook (kaddressbook), signal: Aborted

[KCrash Handler]
#4  __pthread_kill_implementation (no_tid=0, signo=6, threadid=140461839114816) at ./nptl/pthread_kill.c:44
#5  __pthread_kill_internal (signo=6, threadid=140461839114816) at ./nptl/pthread_kill.c:78
#6  __GI___pthread_kill (threadid=140461839114816, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
#7  0x00007fbfd8e42476 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#8  0x00007fbfd8e287f3 in __GI_abort () at ./stdlib/abort.c:79
#9  0x00007fbfd9adb017 in qAbort () at ./src/corelib/global/qglobal.cpp:161
#10 0x00007fbfd9ad64e5 in qt_message_fatal<QString&> (message=..., context=...) at ./src/corelib/global/qlogging.cpp:2003
#11 qt_message(QtMsgType, const QMessageLogContext &, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, context=..., msg=<optimized out>, ap=ap@entry=0x7ffe3bcc2940) at ./src/corelib/global/qlogging.cpp:378
#12 0x00007fbfd9adba43 in QMessageLogger::fatal (this=<optimized out>, msg=<optimized out>) at ./src/corelib/global/qlogging.cpp:901
#13 0x00007fbfd9aa9cf4 in qt_assert_x (where=where@entry=0x7fbfd91c6fc2 "QList<T>::insert", what=what@entry=0x7fbfd91c6544 "index out of range", file=file@entry=0x7fbfd91c6430 "/usr/include/x86_64-linux-gnu/qt6/QtCore/qlist.h", line=line@entry=868) at ./src/corelib/global/qassert.cpp:77
#14 0x00007fbfd916153b in QList<int>::emplace<int&> (this=<optimized out>, i=<optimized out>) at /usr/include/x86_64-linux-gnu/qt6/QtCore/qlist.h:868
#15 QList<int>::emplace<int&> (this=<optimized out>, i=<optimized out>) at /usr/include/x86_64-linux-gnu/qt6/QtCore/qlist.h:866
#16 0x00007fbfd915fee7 in QList<int>::insert (t=<optimized out>, i=<optimized out>, this=0x55e1341ed530) at /usr/include/x86_64-linux-gnu/qt6/QtCore/qlist.h:471
#17 Akonadi::PhoneComboBoxType::setType (this=0x55e1341ed500, type=...) at ./src/akonadi-contacts-widgets/editor/generalinfoeditor/phone/phonecomboboxtype.cpp:42
#18 0x00007fbfd915e89c in Akonadi::PhoneWidget::loadPhone (this=0x55e1341dce50, number=...) at ./src/akonadi-contacts-widgets/editor/generalinfoeditor/phone/phonewidget.cpp:76
#19 0x00007fbfd915cf47 in Akonadi::PhoneWidgetLister::loadContact (this=<optimized out>, contact=...) at ./src/akonadi-contacts-widgets/editor/generalinfoeditor/phone/phonewidgetlister.cpp:37
#20 0x00007fbfd915f6ed in Akonadi::PhoneListWidget::loadContact (this=<optimized out>, contact=...) at ./src/akonadi-contacts-widgets/editor/generalinfoeditor/phone/phonelistwidget.cpp:38
#21 0x00007fbfd916e2e9 in Akonadi::GeneralInfoWidget::loadContact (this=0x55e133f5da00, contact=...) at ./src/akonadi-contacts-widgets/editor/generalinfoeditor/generalinfowidget.cpp:104
#22 0x00007fbfd9188657 in ContactEditorWidget::loadContact (this=0x55e133e9e160, contact=..., metaData=...) at ./src/akonadi-contacts-widgets/editor/contacteditorwidget.cpp:196
#23 0x00007fbfd919455c in Akonadi::AkonadiContactEditorPrivate::loadContact (metaData=..., addr=..., this=0x55e133f0d830) at ./src/akonadi-contacts-widgets/contacteditor.cpp:185
#24 Akonadi::AkonadiContactEditorPrivate::parentCollectionFetchDone (this=0x55e133f0d830, job=<optimized out>) at ./src/akonadi-contacts-widgets/contacteditor.cpp:137
#25 0x00007fbfd9a2b7ce in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ./src/corelib/kernel/qobjectdefs_impl.h:433
#26 doActivate<false> (sender=0x7fbfc4009ed0, signal_index=6, argv=0x7ffe3bcc2d30) at ./src/corelib/kernel/qobject.cpp:4039
#27 0x00007fbfdb169870 in KJob::result (this=this@entry=0x7fbfc4009ed0, _t1=<optimized out>, _t1@entry=0x7fbfc4009ed0, _t2=...) at ./obj-x86_64-linux-gnu/src/lib/KF6CoreAddons_autogen/include/moc_kjob.cpp:793
#28 0x00007fbfdb16d63b in KJob::finishJob (this=0x7fbfc4009ed0, emitResult=<optimized out>) at ./src/lib/jobs/kjob.cpp:98
#29 0x00007fbfd99c9572 in QObject::event (this=0x7fbfc4009ed0, e=0x55e134a17b40) at ./src/corelib/kernel/qobject.cpp:1437
#30 0x00007fbfdabf40eb in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x7fbfc4009ed0, e=0x55e134a17b40) at ./src/widgets/kernel/qapplication.cpp:3296
#31 0x00007fbfd9a63e18 in QCoreApplication::notifyInternal2 (receiver=0x7fbfc4009ed0, event=event@entry=0x55e134a17b40) at ./src/corelib/kernel/qcoreapplication.cpp:1121
#32 0x00007fbfd9a63e5d in QCoreApplication::sendEvent (receiver=<optimized out>, event=event@entry=0x55e134a17b40) at ./src/corelib/kernel/qcoreapplication.cpp:1539
#33 0x00007fbfd9a64530 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x55e13391e990) at ./src/corelib/kernel/qcoreapplication.cpp:1901
#34 0x00007fbfd98632f7 in postEventSourceDispatch (s=0x55e1339c9660) at ./src/corelib/kernel/qeventdispatcher_glib.cpp:243
#35 0x00007fbfd7e54d3b in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007fbfd7eaa258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#37 0x00007fbfd7e523e3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#38 0x00007fbfd985e1f0 in QEventDispatcherGlib::processEvents (this=0x55e1339c6f60, flags=...) at ./src/corelib/kernel/qeventdispatcher_glib.cpp:393
#39 0x00007fbfd9a6604b in QEventLoop::exec (this=this@entry=0x7ffe3bcc3150, flags=..., flags@entry=...) at ./src/corelib/global/qflags.h:34
#40 0x00007fbfdaa12f6f in QDialog::exec (this=0x55e133fd13a0) at ./src/corelib/global/qflags.h:74
#41 0x00007fbfd919d7b7 in Akonadi::StandardContactActionManagerPrivate::slotEditItem (this=<optimized out>) at ./src/akonadi-contacts-widgets/standardcontactactionmanager.cpp:454
#42 0x00007fbfd9a2b7ce in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ./src/corelib/kernel/qobjectdefs_impl.h:433
#43 doActivate<false> (sender=0x55e133fe29c0, signal_index=7, argv=0x7ffe3bcc3390) at ./src/corelib/kernel/qobject.cpp:4039
#44 0x00007fbfda23dc36 in QAction::triggered (this=this@entry=0x55e133fe29c0, _t1=<optimized out>) at ./obj-x86_64-linux-gnu/src/gui/Gui_autogen/include/moc_qaction.cpp:642
#45 0x00007fbfda241994 in QAction::activate (this=0x55e133fe29c0, event=<optimized out>) at ./src/gui/kernel/qaction.cpp:1102
#46 0x00007fbfdab8b731 in QAbstractButtonPrivate::click (this=0x55e1341a2d30) at ./src/widgets/widgets/qabstractbutton.cpp:362
#47 0x00007fbfdab8b933 in QAbstractButton::mouseReleaseEvent (this=0x55e133eda400, e=0x7ffe3bcc3970) at ./src/widgets/widgets/qabstractbutton.cpp:974
#48 0x00007fbfda9f0fde in QToolButton::mouseReleaseEvent (this=<optimized out>, e=<optimized out>) at ./src/widgets/widgets/qtoolbutton.cpp:584
#49 0x00007fbfdac2e71f in QWidget::event (this=0x55e133eda400, event=0x7ffe3bcc3970) at ./src/widgets/kernel/qwidget.cpp:8959
#50 0x00007fbfdabf40eb in QApplicationPrivate::notify_helper (this=this@entry=0x55e133919d60, receiver=receiver@entry=0x55e133eda400, e=e@entry=0x7ffe3bcc3970) at ./src/widgets/kernel/qapplication.cpp:3296
#51 0x00007fbfdabf833e in QApplication::notify (this=<optimized out>, receiver=0x55e133eda400, e=0x7ffe3bcc3970) at ./src/widgets/kernel/qapplication.cpp:2782
#52 0x00007fbfd9a63e18 in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x55e133eda400, event=event@entry=0x7ffe3bcc3970) at ./src/corelib/kernel/qcoreapplication.cpp:1121
#53 0x00007fbfd9a63e6d in QCoreApplication::sendSpontaneousEvent (receiver=receiver@entry=0x55e133eda400, event=event@entry=0x7ffe3bcc3970) at ./src/corelib/kernel/qcoreapplication.cpp:1553
#54 0x00007fbfdabf3838 in QApplicationPrivate::sendMouseEvent (receiver=0x55e133eda400, event=0x7ffe3bcc3970, alienWidget=0x55e133eda400, nativeWidget=0x55e133d46990, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at ./src/widgets/kernel/qapplication.cpp:2366
#55 0x00007fbfdac41847 in QWidgetWindow::handleMouseEvent (this=0x55e13406ceb0, event=0x7ffe3bcc3d10) at ./src/widgets/kernel/qwidgetwindow.cpp:653
#56 0x00007fbfdac3b185 in QWidgetWindow::event (this=0x55e13406ceb0, event=0x7ffe3bcc3d10) at ./src/widgets/kernel/qwidgetwindow.cpp:267
#57 0x00007fbfdabf40eb in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x55e13406ceb0, e=0x7ffe3bcc3d10) at ./src/widgets/kernel/qapplication.cpp:3296
#58 0x00007fbfd9a63e18 in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x55e13406ceb0, event=event@entry=0x7ffe3bcc3d10) at ./src/corelib/kernel/qcoreapplication.cpp:1121
#59 0x00007fbfd9a63e6d in QCoreApplication::sendSpontaneousEvent (receiver=receiver@entry=0x55e13406ceb0, event=event@entry=0x7ffe3bcc3d10) at ./src/corelib/kernel/qcoreapplication.cpp:1553
#60 0x00007fbfd9eee9eb in QGuiApplicationPrivate::processMouseEvent (e=0x55e133fd0e00) at ./src/gui/kernel/qguiapplication.cpp:2325
#61 0x00007fbfd9f54ecc in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at ./src/gui/kernel/qwindowsysteminterface.cpp:1109
#62 0x00007fbfd2000a8e in xcbSourceDispatch (source=<optimized out>) at ./src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:57
#63 0x00007fbfd7e54d3b in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#64 0x00007fbfd7eaa258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#65 0x00007fbfd7e523e3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#66 0x00007fbfd985e1f0 in QEventDispatcherGlib::processEvents (this=0x55e1339c6f60, flags=...) at ./src/corelib/kernel/qeventdispatcher_glib.cpp:393
#67 0x00007fbfd9a6604b in QEventLoop::exec (this=this@entry=0x7ffe3bcc4150, flags=..., flags@entry=...) at ./src/corelib/global/qflags.h:34
#68 0x00007fbfd9a67c7c in QCoreApplication::exec () at ./src/corelib/global/qflags.h:74
#69 0x00007fbfd9ee9a20 in QGuiApplication::exec () at ./src/gui/kernel/qguiapplication.cpp:1925
#70 0x00007fbfdabf1689 in QApplication::exec () at ./src/widgets/kernel/qapplication.cpp:2574
#71 0x000055e1328c5f33 in main (argc=<optimized out>, argv=<optimized out>) at ./src/main.cpp:80
[Inferior 1 (process 4103) detached]

Reported using DrKonqi
Comment 1 Laurent Montel 2024-03-10 10:43:29 UTC
I confirm it.
I will fix soon.
Comment 2 Laurent Montel 2024-03-10 10:58:06 UTC
Git commit e45975aaf483effc615b0285fd5e2c51b34002f1 by Laurent Montel.
Committed on 10/03/2024 at 10:58.
Pushed by mlaurent into branch 'release/24.02'.

Fix bug 482737: KAddressbook crash editing entry
FIXED-IN: 6.0.1

M  +1    -1    src/akonadi-contacts-widgets/editor/generalinfoeditor/phone/phonecomboboxtype.cpp

https://invent.kde.org/pim/akonadi-contacts/-/commit/e45975aaf483effc615b0285fd5e2c51b34002f1