Fix bug 482737: KAddressbook crash editing entry

BUG: 482737
FIXED-IN: 6.0.1